# csv-2-sql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  test_employees.csv  version.py
.github/: copilot-instructions.md
csv_upload/: forms.py  models.py  urls.py  views.py
csv_upload/migrations/: 0001_initial.py
csv_upload/templates/csv_upload/: configure_column.html  confirm_delete.html  edit_table.html  upload.html  view_table.html
csvtosql/: asgi.py  firefox_compatibility.py  settings.py  urls.py  wsgi.py
