[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-to-sql"
description = "Django web application for converting CSV files to SQL tables"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.2.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yourusername/csv-to-sql"
"Bug Tracker" = "https://github.com/yourusername/csv-to-sql/issues"

[tool.setuptools_scm]
write_to = "csv_to_sql/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_upload*", "csvtosql*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "isort",
    "flake8",
]
